# gethypercube

./: DESIGN.md  LICENSE  README.md  environment.yml  pyproject.toml
examples/: basic_example.ipynb  example_nested.ipynb  example_sliced.ipynb
gethypercube/: __init__.py  utils.py
gethypercube/nested_lhd/: __init__.py  ese.py  multi_layer.py  qian.py  two_layer.py  utils.py  validate.py
gethypercube/sliced_lhd/: __init__.py  construction.py  design.py  objective.py  optimize.py  utils.py
slicedlhd/: __init__.py  construction.py  design.py  objective.py  optimize.py  utils.py
tests/: test_construction.py  test_design.py  test_nested_multi_layer.py  test_nested_two_layer.py  test_nested_validate.py  test_objective.py  test_utils.py
