[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slicedlhd"
version = "0.1.0"
description = "Maximin-distance Sliced Latin Hypercube Designs in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["latin hypercube", "sliced", "design of experiments", "space-filling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Repository = "https://github.com/your-org/slhd"

[tool.setuptools.packages.find]
where = ["."]
include = ["slicedlhd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
